<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_currentGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacingMedium"
            android:layout_marginTop="@dimen/spacingMedium"
            android:layout_marginEnd="@dimen/spacingMedium"
            android:textAppearance="?textAppearanceHeadline6"
            tools:text="Current group: A" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_switchGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacingMedium"
            android:layout_marginTop="@dimen/spacingSmall"
            android:layout_marginEnd="@dimen/spacingMedium"
            android:text="@string/switch_group_action" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_generateEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacingMedium"
            android:layout_marginTop="@dimen/spacingSmall"
            android:layout_marginEnd="@dimen/spacingMedium"
            android:text="@string/generate_events_action" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacingMedium"
            android:layout_marginTop="@dimen/spacingLarge"
            android:layout_marginEnd="@dimen/spacingMedium"
            android:text="@string/behavior_description_label"
            android:textAppearance="?textAppearanceHeadline6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacingMedium"
            android:layout_marginTop="@dimen/spacingSmall"
            android:layout_marginEnd="@dimen/spacingMedium"
            android:text="@string/behavior_description_value"
            android:textAppearance="?textAppearanceBody1" />

    </LinearLayout>
</ScrollView>